--- a/ExtractAll.html
+++ b/ExtractAll.html
@@ -317,7 +317,7 @@
 
   <script>
     // 🔧 SET THIS TO YOUR CLOUDFLARE WORKER URL
-    const PROXY_URL = "https://evans-xml-proxy.YOURACCOUNT.workers.dev";
+    const PROXY_URL = "https://evansxmlproxy.showtailspedigreeapp.workers.dev/";
 
     const fileInput   = document.getElementById('fileInput');
     const statusEl    = document.getElementById('status');
